Add workflowStateOptions and error response

--- a/common.yaml
+++ b/common.yaml
@@ -47,4 +47,9 @@ components:
           enum:
             - NONE
             - ALL_UNFINISHED
+    ErrorResponse:
+      type: object
+      properties:
+        detail: string
+        subStatus: string
 
