--- a/iwf.yaml
+++ b/iwf.yaml
@@ -3,13 +3,34 @@ servers:
   - url: 'http://petstore.swagger.io/v2'
 info:
   description: >-
-    This APIs for iwf-server to invoke user workflow code defined in WorkflowState using any iwf SDKs
+    This APIs for iwf SDKs to operate workflows
   version: 1.0.0
-  title: WorkflowState APIs
+  title: Workflow APIs
   license:
     name: Apache-2.0
     url: 'https://www.apache.org/licenses/LICENSE-2.0.html'
 paths:
+  /api/v1/workflow/start:
+    post:
+      summary: "for a workflow"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/WorkflowStartRequest'
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WorkflowStartResponse'
+        '405':
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: './common.yaml#/components/schemas/ErrorResponse'
   /api/v1/workflowState/start:
     post:
       summary: "for invoking WorkflowState.start API"
@@ -51,9 +72,83 @@ paths:
           content:
             application/json:
               schema:
-                $ref: './common.yaml#/components/schemas/ErrorResponse'
+                $ref: './common.yaml#/components/schemas/ErrorResponse'                
 components:
   schemas:
+    KeyValue:
+      type: object
+      properties:
+        key:
+          type: string
+        value:
+          $ref: '#/components/schemas/EncodedObject'
+    EncodedObject:
+      type: object
+      properties:
+        encoding:
+          type: string
+          enum:
+            - JSON
+        data:
+          type: string
+    WorkflowStateOptions:
+      type: object
+      properties:
+        searchAttributesLoadingPolicy:
+          $ref: '#/components/schemas/AttributesLoadingPolicy'
+        queryAttributesLoadingPolicy:
+          $ref: '#/components/schemas/AttributesLoadingPolicy'
+        commandCarryOverPolicy:
+          $ref: '#/components/schemas/CommandCarryOverPolicy'
+    AttributesLoadingPolicy:
+      type: object
+      properties:
+        attributeLoadingType:
+          type: string
+          enum:
+            - LOAD_ALL_WITHOUT_LOCKING
+            - LOAD_ALL_WITH_EXCLUSIVE_LOCK
+            - LOAD_PARTIAL_WITHOUT_LOCKING
+            - LOAD_PARTIAL_WITH_EXCLUSIVE_LOCK
+        attributeKeys:
+          type: array
+          items:
+            type: string
+    CommandCarryOverPolicy:
+      type: object
+      properties:
+        commandCarryOverType:
+          type: string
+          enum:
+            - NONE
+            - ALL_UNFINISHED
+    ErrorResponse:
+      type: object
+      properties:
+        detail: string
+        subStatus: string  
+    WorkflowStartRequest:
+      type: object
+      properties:
+        workflowId:
+          type: string
+        iwfWorkflowType:
+          type: string
+        workflowTimeoutSeconds:
+          type: integer
+        iwfWorkerUrl:
+          type: string
+        startStateId:
+          type: string
+        stateInput:
+          $ref: './common.yaml#/components/schemas/EncodedObject'
+        stateOptions:
+          $ref: './common.yaml#/components/schemas/WorkflowStateOptions'
+    WorkflowStartResponse:
+      type: object
+      properties:
+        workflowRunId:
+          type: string
     WorkflowStateStartRequest:
       type: object
       properties:
@@ -269,7 +364,4 @@ components:
         workflowStartedTimestamp:
           type: integer
         stateExecutionId:
-          type: string
-
-
-
+          type: string          
