--- a/iwf.yaml
+++ b/iwf.yaml
@@ -91,6 +91,18 @@ components:
             - JSON
         data:
           type: string
+    SearchAttribute:
+      type: object
+      properties:
+        key:
+          type: string
+        value:
+          type: string
+        valueType:
+          type: string
+          enum:
+            - KEYWORD
+            - INT
     WorkflowStateOptions:
       type: object
       properties:
@@ -165,7 +177,7 @@ components:
         searchAttributes:
           type: array
           items:
-            $ref: '#/components/schemas/KeyValue'
+            $ref: '#/components/schemas/SearchAttribute'
         queryAttributes:
           type: array
           items:
@@ -176,7 +188,7 @@ components:
         upsertSearchAttributes:
           type: array
           items:
-            $ref: '#/components/schemas/KeyValue'
+            $ref: '#/components/schemas/SearchAttribute'
         upsertQueryAttributes:
           type: array
           items:
@@ -199,7 +211,7 @@ components:
         searchAttributes:
           type: array
           items:
-            $ref: '#/components/schemas/KeyValue'
+            $ref: '#/components/schemas/SearchAttribute'
         queryAttributes:
           type: array
           items:
@@ -227,7 +239,7 @@ components:
         upsertSearchAttributes:
           type: array
           items:
-            $ref: '#/components/schemas/KeyValue'
+            $ref: '#/components/schemas/SearchAttribute'
         upsertQueryAttributes:
           type: array
           items:
