Add missing state input

--- a/iwf.yaml
+++ b/iwf.yaml
@@ -409,6 +409,8 @@ components:
           type: string
         workflowStateId:
           type: string
+        stateInput:
+          $ref: '#/components/schemas/EncodedObject'
         searchAttributes:
           type: array
           items:
