--- a/iwf.yaml
+++ b/iwf.yaml
@@ -95,6 +95,27 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /api/v1/workflow/getWithLongWait: ## this will wait for workflow to close if still running
+    post:
+      summary: "get a workflow's status and results(if completed & requested), wait if the workflow is still running"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/WorkflowGetRequest'
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WorkflowGetResponse'
+        '400':
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/v1/workflow/search:
     post:
       summary: "search for workflows by a search attribute query"
@@ -302,8 +323,6 @@ components:
         workflowRunId:
           type: string
         needsResults: # result will be return if this is true, and workflow is completed
-          type: boolean
-        waitIfStillRunning: # wait until the workflow is completed, only works when needResults = true
           type: boolean
     WorkflowGetResponse:
       type: object
