--- a/iwf.yaml
+++ b/iwf.yaml
@@ -367,6 +367,7 @@ components:
           type: string
         pageSize:
           type: number
+          format: int32
     WorkflowSearchResponse:
       type: object
       properties:
