--- a/iwf.yaml
+++ b/iwf.yaml
@@ -371,7 +371,7 @@ components:
     WorkflowSearchResponse:
       type: object
       properties:
-        queryAttributes:
+        workflowExecutions:
           type: array
           items:
             $ref: '#/components/schemas/WorkflowSearchResponseEntry'
